Adding checkbox logic on frontend

--- a/frontend/src/components/PokemonCard/PokemonCard.scss
+++ b/frontend/src/components/PokemonCard/PokemonCard.scss
@@ -1,35 +1,35 @@
-@import "./../../variables";
+@import './../../variables';
 .pokemon-card {
-  border: 5px solid $duodenary-color;
-  padding: 25px;
-  border-radius: 5%;
-  background-color: $undenary-color;
-  display: flex;
-  flex-direction: column;
-  font-family: "Courier New", Courier, monospace;
-  width: 200px;
-  height: 400px;
-  margin: 10px;
-  color: $duodenary-color;
-
-  &_header {
+    border: 5px solid $duodenary-color;
+    padding: 25px;
+    border-radius: 5%;
+    background-color: $undenary-color;
     display: flex;
-    justify-content: center;
-    font-size: 1.5em;
-    margin-bottom: 10px;
-  }
+    flex-direction: column;
+    font-family: 'Courier New', Courier, monospace;
+    width: 225px;
+    height: 450px;
+    margin: 10px;
+    color: $duodenary-color;
 
-  &_image {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-items: center;
-    width: 100px;
-    height: auto;
-  }
+    &_header {
+        display: flex;
+        justify-content: center;
+        font-size: 1.5em;
+        margin-bottom: 10px;
+    }
 
-  // &_info {
-  //     display: flex;
-  //     flex-direction: column;
-  // }
+    &_image {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-items: center;
+        width: 100px;
+        height: auto;
+    }
+
+    // &_info {
+    //     display: flex;
+    //     flex-direction: column;
+    // }
 }
