--- a/frontend/src/containers/Login/Login.scss
+++ b/frontend/src/containers/Login/Login.scss
@@ -8,10 +8,18 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding: 20px;
+  position: absolute;
+}
+
+.login-page__background {
+  width: 100%;
+  height: 100vh;
   background-image: url("https://th.bing.com/th/id/R.a66ce352d22f01c5fd34ca8fa8e02837?rik=cGRebNp2ZLD%2bwg&riu=http%3a%2f%2fgetwallpapers.com%2fwallpaper%2ffull%2f1%2fb%2fe%2f70685.jpg&ehk=sTEEzoxZthnfCaWiQRce3yOIjzYZB8MekpDpoovW2r0%3d&risl=&pid=ImgRaw&r=0");
   background-size: cover;
   background-position: center;
-  padding: 20px;
+  filter: blur(3px);
+  opacity: 0.7;
 }
 
 .login-page__logo {
