--- a/frontend/src/components/PokemonCard/PokemonCard.scss
+++ b/frontend/src/components/PokemonCard/PokemonCard.scss
@@ -1,5 +1,4 @@
-@import './../../variables';
-
+@import "./../../variables";
 .pokemon-card {
     border: 5px solid $duodenary-color;
     padding: 25px;
@@ -7,30 +6,62 @@
     background-color: $undenary-color;
     display: flex;
     flex-direction: column;
-    font-family: 'Courier New', Courier, monospace;
-    width: 225px;
-    height: 450px;
+    font-family: "Courier New", Courier, monospace;
+    width: 250px;
+    height: 400px;
     margin: 10px;
     color: $duodenary-color;
 
     &_header {
         display: flex;
-        justify-content: center;
-        font-size: 1.5em;
-        margin-bottom: 10px;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
     }
-
-    &_image {
+    &_checkbox {
+        width: 25px;
+        height: 25px;
+        background-color: $tredenary-color;
+        border: 2px solid $duodenary-color;
         display: flex;
         align-items: center;
         justify-content: center;
-        align-items: center;
-        width: 100px;
-        height: auto;
     }
 
+    &_id {
+       background-color: $senary-color; 
+       width: 30px;
+       height: 30px;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       border-radius: 20px;
+       border: 3px solid $teriary-color;
+       font-weight: bold;
+    }
+
+    &_name {
+        font-size: 24px;
+        text-transform: capitalize;
+        color: $quartenernary-color;
+        font-style: bold;
+    }
+
+    
+    &_image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: auto;
+    }
+
+    
     // &_info {
     //     display: flex;
     //     flex-direction: column;
     // }
+
 }
+ 
