--- a/frontend/src/containers/LoginForm/LoginForm.scss
+++ b/frontend/src/containers/LoginForm/LoginForm.scss
@@ -39,14 +39,19 @@
   }
 
   &__button {
-    font-size: 14px;
-    margin-top: 10px;
-    background-color: green;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 16px;
+    margin-top: 32px;
+    background-color: blue;
+    padding: 5px;
+    border-radius: 15px;
     color: white;
-    width: 50%;
+    width: 150px;
+    height: 40px;
   }
 
-  &__button--primary {
-    background-color: blue;
+  &__button:hover {
+    background-color: darkblue;
   }
 }
