--- a/frontend/src/containers/Login/Login.scss
+++ b/frontend/src/containers/Login/Login.scss
@@ -1,16 +1,19 @@
 @import "./../../variables";
+body {
+  margin: 0;
+}
 
 .login-page {
   font-family: "Courier New", Courier, monospace;
   font-weight: 700;
-  min-height: 100vh;
+  //   min-height: calc(100vh - 40px);
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 20px;
   position: absolute;
+  //   top: -8px;
 }
 
 .login-page__background {
@@ -25,5 +28,6 @@
 
 .login-page__logo {
   width: 65%;
-  max-width: 500px;
+  max-width: 400px;
+  margin-top: 100px;
 }
