--- a/frontend/src/containers/Selected/Selected.scss
+++ b/frontend/src/containers/Selected/Selected.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     background-color: $senary-color;
     width: 100%;
-    min-height: 100vh;
+    
+    flex-wrap: wrap;
     
 }
