change login button

--- a/frontend/src/containers/LoginForm/LoginForm.scss
+++ b/frontend/src/containers/LoginForm/LoginForm.scss
@@ -24,7 +24,7 @@
 
   &__label {
     margin-top: 10px;
-    font-size: 16px;
+    font-size: 18px;
     display: flex;
     flex-direction: column;
     justify-self: start;
@@ -34,22 +34,38 @@
   &__input {
     padding: 10px;
     margin-top: 5px;
+    font-size: 15px;
   }
 
   &__button {
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 16px;
-    margin-top: 26px;
-    background-color: blue;
-    padding: 5px;
-    border-radius: 15px;
-    color: white;
-    width: 150px;
-    height: 40px;
-  }
+    font-family: "Courier New", Courier, monospace;
+    font-size: 18px;
+    font-weight: bold;
+    width: 160px;
+    height: 46px;
+    margin: 26px auto 0;
+    background: linear-gradient(to right, $octonary-color, $quinary-color);
+    border-radius: 80px;
+    border: 3px;
 
-  &__button:hover {
-    background-color: darkblue;
+    color: black;
+    text-align: center;
+    cursor: pointer;
+
+    &:hover {
+      background: linear-gradient(
+        to right,
+        darken($octonary-color, 10%),
+        darken($quinary-color, 10%)
+      );
+    }
+
+    &:active {
+      background: linear-gradient(
+        to right,
+        darken($octonary-color, 20%),
+        darken($quinary-color, 20%)
+      );
+    }
   }
 }
