--- a/frontend/src/containers/LoginForm/LoginForm.scss
+++ b/frontend/src/containers/LoginForm/LoginForm.scss
@@ -1,15 +1,16 @@
 @import "./../../variables";
 
 .login-form {
+  font-family: "Courier New", Courier, monospace;
   margin: 0 auto;
-  margin-top: 80px;
+  margin-top: 58px;
   text-align: start;
   background-color: white;
-  padding: 60px;
+  padding: 55px 60px 45px 60px;
   border-radius: 10px;
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.065);
-  width: calc(95% - 80px);
-  max-width: 500px;
+  width: calc(45% - 10px);
+  max-width: 450px;
 
   &__form {
     display: flex;
@@ -23,7 +24,7 @@
   }
 
   &__label {
-    margin-top: 10px;
+    margin-top: 8px;
     font-size: 18px;
     display: flex;
     flex-direction: column;
@@ -33,8 +34,12 @@
 
   &__input {
     padding: 10px;
-    margin-top: 5px;
+    margin-top: 7px;
     font-size: 15px;
+    outline: none;
+    &:focus {
+      border: 1px solid $secondary-color;
+    }
   }
 
   &__button {
@@ -43,7 +48,7 @@
     font-weight: bold;
     width: 160px;
     height: 46px;
-    margin: 26px auto 0;
+    margin: 10px auto 0;
     background: linear-gradient(to right, $octonary-color, $quinary-color);
     border-radius: 80px;
     border: 3px;
