--- a/frontend/src/containers/Nav/Nav.scss
+++ b/frontend/src/containers/Nav/Nav.scss
@@ -37,6 +37,11 @@
         justify-content: center;
         font-size: 20px;
         width: 150px;
+        background-color: $nonary-color;
+        font-family: "Courier New", Courier, monospace;
+        font-size: 18px;
+        font-weight: bold;
+        color: $septenary-color;
     }
 
 
