--- a/frontend/src/containers/Selected/Selected.scss
+++ b/frontend/src/containers/Selected/Selected.scss
@@ -6,6 +6,6 @@
   justify-content: center;
   background-color: $senary-color;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   flex-wrap: wrap;
 }
